refactor(todo): extract ErrorResponse record and reduce service duplication
- Replace raw Map<String, Object> with ErrorResponse record in GlobalExceptionHandler
- Extract findTodoOrThrow helper in TodoService to eliminate repeated findById pattern
- Replace Collectors.toList() with toList()
- All 49 tests still passing

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>